--- a/src/scss/single.scss
+++ b/src/scss/single.scss
@@ -13,7 +13,9 @@
     max-width: 1000px;
     margin: auto;
     img {
-    max-width: 100%;
+        display: block;
+        max-width: 100%;
+        margin: auto;
     }
 }
 .author-meta {
